# ChangeLog for dev-python/path-py
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/path-py/ChangeLog,v 1.2 2014/10/21 09:24:19 idella4 Exp $

*path-py-7.0 (21 Oct 2014)

  21 Oct 2014; Ian Delaney <idella4@gentoo.org> +path-py-7.0.ebuild:
  bump

*path-py-6.0 (27 Sep 2014)

  27 Sep 2014; Mike Gilbert <floppym@gentoo.org> +metadata.xml,
  +path-py-6.0.ebuild:
  New package, dependency of net-misc/flexget.