@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/path-py
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/path-py/ChangeLog,v 1.2 2014/10/21 09:24:19 idella4 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/path-py/ChangeLog,v 1.3 2014/10/22 04:52:38 idella4 Exp $
+
+  22 Oct 2014; Ian Delaney <idella4@gentoo.org> path-py-7.0.ebuild:
+  remove premature addition of doc build
 
 *path-py-7.0 (21 Oct 2014)
 
